add compilation flags in test